--- a/webapp/src/ionicapp/SCSS/ionic.app.scss
+++ b/webapp/src/ionicapp/SCSS/ionic.app.scss
@@ -1,3 +1,4 @@
+$positive: #3C5A99;
 $dark: #444444;
 $link-color: $dark;
 $ionicons-font-path: "../lib/ionic/fonts" !default;
@@ -38,11 +39,11 @@ table, th, td {
 }
 
 .card_top {
-	background-color: #387EF5;
+	background-color: #3C5A99;
 }
 
 .card_middle {
-	background-color: #387EF5;
+	background-color: #3C5A99;
 }
 
 .tab_margin_1 {
