--- a/webapp/src/ionicapp/www/templates/add1WIREDeviceDetails.html
+++ b/webapp/src/ionicapp/www/templates/add1WIREDeviceDetails.html
@@ -9,7 +9,7 @@
     <form id="add1WIREDeviceDetails-form150" class="list">
       <div class="spacer" style="width: 300px; height: 10px;"></div>
       <div id="add1WIREDeviceDetails-markdown253" style="text-align:center;" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;font-size:18px;">
+        <p style="color:#3C5A99;font-size:18px;">
           <strong> {{ data.devicename }} </strong>
         </p>
       </div>
@@ -20,7 +20,7 @@
       </div>
       <div class="spacer" style="width: 300px; height: 10px;"></div>
       <div id="add1WIREDeviceDetails-markdown255" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Manufacturer</p>
+        <p style="color:#3C5A99;">Manufacturer</p>
       </div>
       <div id="add1WIREDeviceDetails-markdown256" class="show-list-numbers-and-dots">
         <p style="color:#444444;font-size:18px;">
@@ -28,32 +28,32 @@
         </p>
       </div>
       <div id="add1WIREDeviceDetails-markdown257" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Device Model</p>
+        <p style="color:#3C5A99;">Device Model</p>
       </div>
       <div id="add1WIREDeviceDetails-markdown258" class="show-list-numbers-and-dots">
         <p style="color:#444444;font-size:18px;">
           <strong> {{ data.onewire.model }} </strong> ({{ data.onewire.name }})</p>
       </div>
       <div id="add1WIREDeviceDetails-markdown259" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Device Description</p>
+        <p style="color:#3C5A99;">Device Description</p>
       </div>
       <div id="add1WIREDeviceDetails-markdown260" class="show-list-numbers-and-dots">
         <p style="color:#444444;font-size:18px;">{{ data.onewire.desc }}</p>
       </div>
       <div id="add1WIREDeviceDetails-markdown261" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Device Link</p>
+        <p style="color:#3C5A99;">Device Link</p>
       </div>
       <div id="add1WIREDeviceDetails-markdown262" class="show-list-numbers-and-dots">
         <p style="color:#444444;font-size:18px;">{{ data.onewire.link }}</p>
       </div>
       <div id="add1WIREDeviceDetails-markdown263" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Device Class</p>
+        <p style="color:#3C5A99;">Device Class</p>
       </div>
       <div id="add1WIREDeviceDetails-markdown264" class="show-list-numbers-and-dots">
         <p style="color:#444444;font-size:18px;">{{ data.onewire.class }}</p>
       </div>
       <div id="add1WIREDeviceDetails-markdown265" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Device Type</p>
+        <p style="color:#3C5A99;">Device Type</p>
       </div>
       <div id="add1WIREDeviceDetails-markdown266" class="show-list-numbers-and-dots">
         <p style="color:#444444;font-size:18px;">{{ data.onewire.type }}</p>
@@ -64,7 +64,7 @@
     </div>
     <form id="add1WIREDeviceDetails-form151" class="list">
       <div id="add1WIREDeviceDetails-markdown268" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Provide the details below</p>
+        <p style="color:#3C5A99;">Provide the details below</p>
       </div>
       <label class="item item-input" id="add1WIREDeviceDetails-input121">
         <span class="input-label">Name</span>
