--- a/webapp/src/ionicapp/www/templates/addADCDeviceDetails.html
+++ b/webapp/src/ionicapp/www/templates/addADCDeviceDetails.html
@@ -9,7 +9,7 @@
     <form id="addADCDeviceDetails-form117" class="list">
       <div class="spacer" style="width: 300px; height: 10px;"></div>
       <div id="addADCDeviceDetails-markdown173" style="text-align:center;" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;font-size:18px;">
+        <p style="color:#3C5A99;font-size:18px;">
           <strong> {{ data.devicename }} </strong>
         </p>
       </div>
@@ -20,7 +20,7 @@
       </div>
       <div class="spacer" style="width: 300px; height: 10px;"></div>
       <div id="addADCDeviceDetails-markdown189" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Manufacturer</p>
+        <p style="color:#3C5A99;">Manufacturer</p>
       </div>
       <div id="addADCDeviceDetails-markdown190" class="show-list-numbers-and-dots">
         <p style="color:#444444;font-size:18px;">
@@ -28,32 +28,32 @@
         </p>
       </div>
       <div id="addADCDeviceDetails-markdown191" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Device Model</p>
+        <p style="color:#3C5A99;">Device Model</p>
       </div>
       <div id="addADCDeviceDetails-markdown192" class="show-list-numbers-and-dots">
         <p style="color:#444444;font-size:18px;">
           <strong> {{ data.adc.model }} </strong> ({{ data.adc.name }})</p>
       </div>
       <div id="addADCDeviceDetails-markdown193" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Device Description</p>
+        <p style="color:#3C5A99;">Device Description</p>
       </div>
       <div id="addADCDeviceDetails-markdown194" class="show-list-numbers-and-dots">
         <p style="color:#444444;font-size:18px;">{{ data.adc.desc }}</p>
       </div>
       <div id="addADCDeviceDetails-markdown195" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Device Link</p>
+        <p style="color:#3C5A99;">Device Link</p>
       </div>
       <div id="addADCDeviceDetails-markdown196" class="show-list-numbers-and-dots">
         <p style="color:#444444;font-size:18px;">{{ data.adc.link }}</p>
       </div>
       <div id="addADCDeviceDetails-markdown197" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Device Class</p>
+        <p style="color:#3C5A99;">Device Class</p>
       </div>
       <div id="addADCDeviceDetails-markdown198" class="show-list-numbers-and-dots">
         <p style="color:#444444;font-size:18px;">{{ data.adc.class }}</p>
       </div>
       <div id="addADCDeviceDetails-markdown199" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Device Type</p>
+        <p style="color:#3C5A99;">Device Type</p>
       </div>
       <div id="addADCDeviceDetails-markdown200" class="show-list-numbers-and-dots">
         <p style="color:#444444;font-size:18px;">{{ data.adc.type }}</p>
@@ -64,7 +64,7 @@
     </div>
     <form id="addADCDeviceDetails-form131" class="list">
       <div id="addADCDeviceDetails-markdown202" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Provide the details below</p>
+        <p style="color:#3C5A99;">Provide the details below</p>
       </div>
       <label class="item item-input" id="addADCDeviceDetails-input109">
         <span class="input-label">Name</span>
