--- a/webapp/src/ionicapp/www/templates/addI2CDeviceDetails.html
+++ b/webapp/src/ionicapp/www/templates/addI2CDeviceDetails.html
@@ -9,7 +9,7 @@
     <form id="addI2CDeviceDetails-form59" class="list">
       <div class="spacer" style="width: 300px; height: 10px;"></div>
       <div id="addI2CDeviceDetails-markdown75" style="text-align:center;" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;font-size:18px;">
+        <p style="color:#3C5A99;font-size:18px;">
           <strong> {{ data.devicename }} </strong>
         </p>
       </div>
@@ -20,7 +20,7 @@
       </div>
       <div class="spacer" style="width: 300px; height: 10px;"></div>
       <div id="addI2CDeviceDetails-markdown60" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Manufacturer</p>
+        <p style="color:#3C5A99;">Manufacturer</p>
       </div>
       <div id="addI2CDeviceDetails-markdown22" class="show-list-numbers-and-dots">
         <p style="color:#444444;font-size:18px;">
@@ -28,38 +28,38 @@
         </p>
       </div>
       <div id="addI2CDeviceDetails-markdown67" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Device Model</p>
+        <p style="color:#3C5A99;">Device Model</p>
       </div>
       <div id="addI2CDeviceDetails-markdown23" class="show-list-numbers-and-dots">
         <p style="color:#444444;font-size:18px;">
           <strong> {{ data.i2c.model }} </strong> ({{ data.i2c.name }})</p>
       </div>
       <div id="addI2CDeviceDetails-markdown138" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Device Description</p>
+        <p style="color:#3C5A99;">Device Description</p>
       </div>
       <div id="addI2CDeviceDetails-markdown9" class="show-list-numbers-and-dots">
         <p style="color:#444444;font-size:18px;">{{ data.i2c.desc }}</p>
       </div>
       <div id="addI2CDeviceDetails-markdown139" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Device Link</p>
+        <p style="color:#3C5A99;">Device Link</p>
       </div>
       <div id="addI2CDeviceDetails-markdown33" class="show-list-numbers-and-dots">
         <p style="color:#444444;font-size:18px;">{{ data.i2c.link }}</p>
       </div>
       <div id="addI2CDeviceDetails-markdown140" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Device Class</p>
+        <p style="color:#3C5A99;">Device Class</p>
       </div>
       <div id="addI2CDeviceDetails-markdown133" class="show-list-numbers-and-dots">
         <p style="color:#444444;font-size:18px;">{{ data.i2c.class }}</p>
       </div>
       <div id="addI2CDeviceDetails-markdown143" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Device Type</p>
+        <p style="color:#3C5A99;">Device Type</p>
       </div>
       <div id="addI2CDeviceDetails-markdown144" class="show-list-numbers-and-dots">
         <p style="color:#444444;font-size:18px;">{{ data.i2c.type }}</p>
       </div>
       <div id="addI2CDeviceDetails-markdown249" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Device Address Range</p>
+        <p style="color:#3C5A99;">Device Address Range</p>
       </div>
       <div id="addI2CDeviceDetails-markdown250" class="show-list-numbers-and-dots">
         <p style="color:#444444;font-size:18px;">0x{{ data.i2c.addresses.default.toString(16).toUpperCase() }} - 0x{{ data.i2c.addresses.max.toString(16).toUpperCase() }} ({{ data.i2c.addresses.default }} - {{ data.i2c.addresses.max }})</p>
@@ -70,7 +70,7 @@
     </div>
     <form id="addI2CDeviceDetails-form64" class="list">
       <div id="addI2CDeviceDetails-markdown21" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Provide the details below</p>
+        <p style="color:#3C5A99;">Provide the details below</p>
       </div>
       <label class="item item-input" id="addI2CDeviceDetails-input87">
         <span class="input-label">Name</span>
