--- a/webapp/src/ionicapp/www/templates/addTPROBEDeviceDetails.html
+++ b/webapp/src/ionicapp/www/templates/addTPROBEDeviceDetails.html
@@ -9,7 +9,7 @@
     <form id="addTPROBEDeviceDetails-form142" class="list">
       <div class="spacer" style="width: 300px; height: 10px;"></div>
       <div id="addTPROBEDeviceDetails-markdown157" style="text-align:center;" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;font-size:18px;">
+        <p style="color:#3C5A99;font-size:18px;">
           <strong> {{ data.devicename }} </strong>
         </p>
       </div>
@@ -20,7 +20,7 @@
       </div>
       <div class="spacer" style="width: 300px; height: 10px;"></div>
       <div id="addTPROBEDeviceDetails-markdown159" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Manufacturer</p>
+        <p style="color:#3C5A99;">Manufacturer</p>
       </div>
       <div id="addTPROBEDeviceDetails-markdown160" class="show-list-numbers-and-dots">
         <p style="color:#444444;font-size:18px;">
@@ -28,38 +28,38 @@
         </p>
       </div>
       <div id="addTPROBEDeviceDetails-markdown161" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Device Model</p>
+        <p style="color:#3C5A99;">Device Model</p>
       </div>
       <div id="addTPROBEDeviceDetails-markdown162" class="show-list-numbers-and-dots">
         <p style="color:#444444;font-size:18px;">
           <strong> {{ data.tprobe.model }} </strong> ({{ data.tprobe.name }})</p>
       </div>
       <div id="addTPROBEDeviceDetails-markdown163" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Device Description</p>
+        <p style="color:#3C5A99;">Device Description</p>
       </div>
       <div id="addTPROBEDeviceDetails-markdown164" class="show-list-numbers-and-dots">
         <p style="color:#444444;font-size:18px;">{{ data.tprobe.desc }}</p>
       </div>
       <div id="addTPROBEDeviceDetails-markdown165" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Device Link</p>
+        <p style="color:#3C5A99;">Device Link</p>
       </div>
       <div id="addTPROBEDeviceDetails-markdown166" class="show-list-numbers-and-dots">
         <p style="color:#444444;font-size:18px;">{{ data.tprobe.link }}</p>
       </div>
       <div id="addTPROBEDeviceDetails-markdown167" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Device Class</p>
+        <p style="color:#3C5A99;">Device Class</p>
       </div>
       <div id="addTPROBEDeviceDetails-markdown168" class="show-list-numbers-and-dots">
         <p style="color:#444444;font-size:18px;">{{ data.tprobe.class }}</p>
       </div>
       <div id="addTPROBEDeviceDetails-markdown121" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Device Subclass</p>
+        <p style="color:#3C5A99;">Device Subclass</p>
       </div>
       <div id="addTPROBEDeviceDetails-markdown124" class="show-list-numbers-and-dots">
         <p style="color:#444444;font-size:18px;">{{ data.tprobe.subclass }}</p>
       </div>
       <div id="addTPROBEDeviceDetails-markdown217" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Device Type</p>
+        <p style="color:#3C5A99;">Device Type</p>
       </div>
       <div id="addTPROBEDeviceDetails-markdown218" class="show-list-numbers-and-dots">
         <p style="color:#444444;font-size:18px;">{{ data.tprobe.type }}</p>
@@ -70,7 +70,7 @@
     </div>
     <form id="addTPROBEDeviceDetails-form143" class="list">
       <div id="addTPROBEDeviceDetails-markdown228" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Provide the details below</p>
+        <p style="color:#3C5A99;">Provide the details below</p>
       </div>
       <label class="item item-input" id="addTPROBEDeviceDetails-input120">
         <span class="input-label">Name</span>
