--- a/webapp/src/ionicapp/www/templates/creditPurchases.html
+++ b/webapp/src/ionicapp/www/templates/creditPurchases.html
@@ -9,7 +9,7 @@
         <p style="color:#000000;">Available Credits</p>
       </div>
       <div id="creditPurchases-markdown433" style="text-align:right;" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;font-size:24px;">
+        <p style="color:#3C5A99;font-size:24px;">
           <strong> {{ data.credits }} </strong>
         </p>
       </div>
@@ -23,7 +23,7 @@
     <ion-list id="creditPurchases-list11">
       <div class="item item-body" id="creditPurchases-list-item-container9" ng-repeat="item in items" ng-click="getTransactionDetails(item)">
         <div id="creditPurchases-markdown350" class="show-list-numbers-and-dots">
-          <p style="margin-top:0px;color:#387EF5;font-size:16px;">
+          <p style="margin-top:0px;color:#3C5A99;font-size:16px;">
             <strong> Paypal Transaction ID: {{ item.id }} </strong>
           </p>
         </div>
