--- a/webapp/src/ionicapp/www/templates/deviceGeneralSettings.html
+++ b/webapp/src/ionicapp/www/templates/deviceGeneralSettings.html
@@ -8,7 +8,7 @@
   <ion-content padding="true" class="has-header">
     <div class="spacer" style="height: 12px;"></div>
     <div id="deviceGeneralSettings-markdown182" style="text-align:center;" class="show-list-numbers-and-dots">
-      <p style="color:#387EF5;font-size:18px;">
+      <p style="color:#3C5A99;font-size:18px;">
         <strong> {{ data.devicename }} </strong>
       </p>
     </div>
