--- a/webapp/src/ionicapp/www/templates/history.html
+++ b/webapp/src/ionicapp/www/templates/history.html
@@ -6,7 +6,7 @@
     </form>
     <form id="history-form193" class="list" ng-show="!hide_settings">
       <div id="history-markdown291" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Filter options</p>
+        <p style="color:#3C5A99;">Filter options</p>
       </div>
       <div class="spacer" style="width: 300px; height: 5px;"></div>
       <label class="item item-select widget_button_third" id="history-select99">
@@ -38,7 +38,7 @@
     <ion-list id="history-list14">
       <div class="item item-body" id="history-list-item-container3" ng-repeat="item in items">
         <div id="history-markdown49" class="show-list-numbers-and-dots">
-          <p style="margin-top:0px;color:#387EF5;font-size:16px;">{{ item.direction }}
+          <p style="margin-top:0px;color:#3C5A99;font-size:16px;">{{ item.direction }}
             <strong> {{ item.devicename }} </strong> {{ item.deviceid }}</p>
         </div>
         <div id="history-markdown50" class="show-list-numbers-and-dots">
