--- a/webapp/src/ionicapp/www/templates/light.html
+++ b/webapp/src/ionicapp/www/templates/light.html
@@ -8,7 +8,7 @@
   <ion-content padding="true" class="has-header">
     <div class="spacer" style="width: 300px; height: 12px;"></div>
     <div id="light-markdown100" style="text-align:center;" class="show-list-numbers-and-dots">
-      <p style="color:#387EF5;font-size:18px;">
+      <p style="color:#3C5A99;font-size:18px;">
         <strong> {{ data.devicename }} </strong>
       </p>
     </div>
@@ -16,7 +16,7 @@
     <form id="light-form99" class="list">
       <div class="spacer" style="width: 480px; height: 20px;"></div>
       <div id="light-markdown123" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Color usage</p>
+        <p style="color:#3C5A99;">Color usage</p>
       </div>
       <label class="item item-select" id="light-select17">
         <span class="input-label"></span>
@@ -25,7 +25,7 @@
     </form>
     <form id="light-form100" class="list" ng-show="data.attributes.color.usage==0">
       <div id="light-markdown126" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Color settings</p>
+        <p style="color:#3C5A99;">Color settings</p>
       </div>
       <div class="item item-body" id="light-list-item-container12" ng-click="configureColor(&quot;RGB&quot;)">
         <div id="light-markdown315" class="show-list-numbers-and-dots">
@@ -41,7 +41,7 @@
     </form>
     <form id="light-form119" class="list" ng-show="data.attributes.color.usage==1">
       <div id="light-markdown174" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Color values</p>
+        <p style="color:#3C5A99;">Color values</p>
       </div>
       <div class="item item-body" id="light-list-item-container13" ng-click="configureColor(&quot;RED&quot;)">
         <div id="light-markdown332" class="show-list-numbers-and-dots">
@@ -79,7 +79,7 @@
     </form>
     <form id="light-form103" class="list">
       <div id="light-markdown135" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Fadeout time (sec)</p>
+        <p style="color:#3C5A99;">Fadeout time (sec)</p>
       </div>
       <label class="item item-input" id="light-input96">
         <input type="number" placeholder="" ng-model="data.attributes.fadeouttime">
