--- a/webapp/src/ionicapp/www/templates/multiclass.html
+++ b/webapp/src/ionicapp/www/templates/multiclass.html
@@ -8,7 +8,7 @@
   <ion-content padding="true" class="has-header">
     <div class="spacer" style="width: 300px; height: 12px;"></div>
     <div id="multiclass-markdown323" style="text-align:center;" class="show-list-numbers-and-dots">
-      <p style="color:#387EF5;font-size:18px;">
+      <p style="color:#3C5A99;font-size:18px;">
         <strong> {{ data.devicename }} </strong>
       </p>
     </div>
@@ -16,7 +16,7 @@
     <form id="multiclass-form178" class="list">
       <div class="item item-body" id="multiclass-list-item-container10" ng-click="enterPage(data.sensor.class)">
         <div id="multiclass-markdown336" class="show-list-numbers-and-dots">
-          <p style="margin-top:0px;color:#387EF5;font-size:18px;">
+          <p style="margin-top:0px;color:#3C5A99;font-size:18px;">
             <strong> Configure {{ data.sensor.class.toUpperCase() }} </strong>
           </p>
         </div>
@@ -26,7 +26,7 @@
       </div>
       <div class="item item-body" id="multiclass-list-item-container11" ng-click="enterPage(data.sensor.subclass)">
         <div id="multiclass-markdown337" class="show-list-numbers-and-dots">
-          <p style="margin-top:0px;color:#387EF5;font-size:18px;">
+          <p style="margin-top:0px;color:#3C5A99;font-size:18px;">
             <strong> Configure {{ data.sensor.subclass.toUpperCase() }} </strong>
           </p>
         </div>
