--- a/webapp/src/ionicapp/www/templates/oTAFirmwareUpdate.html
+++ b/webapp/src/ionicapp/www/templates/oTAFirmwareUpdate.html
@@ -8,7 +8,7 @@
   <ion-content padding="true" class="has-header">
     <div class="spacer" style="height: 12px;"></div>
     <div id="oTAFirmwareUpdate-markdown349" style="text-align:center;" class="show-list-numbers-and-dots">
-      <p style="color:#387EF5;font-size:18px;">
+      <p style="color:#3C5A99;font-size:18px;">
         <strong> {{ data.devicename }} </strong>
       </p>
     </div>
@@ -27,7 +27,7 @@
     <form id="oTAFirmwareUpdate-form224" class="list" ng-show="data.devicename != &quot;All devices&quot;">
       <div id="oTAFirmwareUpdate-markdown357" class="show-list-numbers-and-dots"></div>
       <div id="oTAFirmwareUpdate-markdown358" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Device Information</p>
+        <p style="color:#3C5A99;">Device Information</p>
       </div>
       <label class="item item-input" id="oTAFirmwareUpdate-input169">
         <span class="input-label">Device Name</span>
@@ -57,7 +57,7 @@
     <form id="oTAFirmwareUpdate-form229" class="list" ng-show="data.devicename == &quot;All devices&quot;">
       <div id="oTAFirmwareUpdate-markdown403" class="show-list-numbers-and-dots"></div>
       <div id="oTAFirmwareUpdate-markdown409" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Device Information</p>
+        <p style="color:#3C5A99;">Device Information</p>
       </div>
       <div id="oTAFirmwareUpdate-container11" class="tab_margin_1">
         <table style="width:100%" bordercolor="#444444">
@@ -103,7 +103,7 @@
     <form id="oTAFirmwareUpdate-form221" class="list">
       <div id="oTAFirmwareUpdate-markdown353" class="show-list-numbers-and-dots"></div>
       <div id="oTAFirmwareUpdate-markdown354" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Online Upgrade</p>
+        <p style="color:#3C5A99;">Online Upgrade</p>
       </div>
       <div id="oTAFirmwareUpdate-markdown356" class="show-list-numbers-and-dots tab_margin_1">
         <p style="color:#444444;font-size:16px;">
