--- a/webapp/src/ionicapp/www/templates/order.html
+++ b/webapp/src/ionicapp/www/templates/order.html
@@ -9,7 +9,7 @@
         <p style="color:#000000;">Available Credits</p>
       </div>
       <div id="order-markdown442" style="text-align:right;" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;font-size:24px;">
+        <p style="color:#3C5A99;font-size:24px;">
           <strong> {{ data.credits }} </strong>
         </p>
       </div>
