--- a/webapp/src/ionicapp/www/templates/sensorDashboard.html
+++ b/webapp/src/ionicapp/www/templates/sensorDashboard.html
@@ -8,7 +8,7 @@
   <ion-content padding="true" class="has-header">
     <div class="spacer" style="width: 300px; height: 12px;"></div>
     <div id="sensorDashboard-markdown57" style="text-align:center;" class="show-list-numbers-and-dots">
-      <p style="color:#387EF5;font-size:18px;">
+      <p style="color:#3C5A99;font-size:18px;">
         <strong> {{ data.devicename }} </strong>
       </p>
     </div>
@@ -18,10 +18,10 @@
     </form>
     <form id="sensorDashboard-form168" class="list" ng-show="!hide_settings">
       <div id="sensorDashboard-markdown413" class="show-list-numbers-and-dots widget_title_half_50">
-        <p style="color:#387EF5;">Sensor Filter</p>
+        <p style="color:#3C5A99;">Sensor Filter</p>
       </div>
       <div id="sensorDashboard-markdown434" class="show-list-numbers-and-dots widget_title_half_50">
-        <p style="color:#387EF5;">Dashboard Settings</p>
+        <p style="color:#3C5A99;">Dashboard Settings</p>
       </div>
       <label class="item item-select widget_button_half_50" id="sensorDashboard-select98">
         <span class="input-label">Device</span>
