--- a/webapp/src/ionicapp/www/templates/speaker.html
+++ b/webapp/src/ionicapp/www/templates/speaker.html
@@ -8,7 +8,7 @@
   <ion-content padding="true" class="has-header">
     <div class="spacer" style="width: 300px; height: 12px;"></div>
     <div id="speaker-markdown82" style="text-align:center;" class="show-list-numbers-and-dots">
-      <p style="color:#387EF5;font-size:18px;">
+      <p style="color:#3C5A99;font-size:18px;">
         <strong> {{ data.devicename }} </strong>
       </p>
     </div>
@@ -16,7 +16,7 @@
     <div class="spacer" style="width: 300px; height: 20px;"></div>
     <form id="speaker-form72" class="list">
       <div id="speaker-markdown97" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Source endpoint</p>
+        <p style="color:#3C5A99;">Source endpoint</p>
       </div>
       <label class="item item-select" id="speaker-select32">
         <span class="input-label"></span>
@@ -25,7 +25,7 @@
     </form>
     <form id="speaker-form74" class="list" ng-show="data.attributes.endpoint==1">
       <div id="speaker-markdown99" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Hardware</p>
+        <p style="color:#3C5A99;">Hardware</p>
       </div>
       <label class="item item-select" id="speaker-select34">
         <span class="input-label">IoT Modem</span>
@@ -46,7 +46,7 @@
     </form>
     <form id="speaker-form77" class="list" ng-show="data.attributes.endpoint==0">
       <div id="speaker-markdown98" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Set MIDI file configuration</p>
+        <p style="color:#3C5A99;">Set MIDI file configuration</p>
       </div>
       <label class="item item-input" id="speaker-input92">
         <span class="input-label">Duration (milliseconds)</span>
@@ -63,7 +63,7 @@
     </form>
     <form id="speaker-form107" class="list" ng-show="data.attributes.endpoint==1">
       <div id="speaker-markdown129" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Set MIDI file configuration</p>
+        <p style="color:#3C5A99;">Set MIDI file configuration</p>
       </div>
       <label class="item item-input" id="speaker-input99">
         <span class="input-label">Duration (milliseconds)</span>
