--- a/webapp/src/ionicapp/www/templates/view1WIREDevice.html
+++ b/webapp/src/ionicapp/www/templates/view1WIREDevice.html
@@ -8,7 +8,7 @@
   <ion-content padding="true" class="has-header">
     <div class="spacer" style="width: 300px; height: 12px;"></div>
     <div id="view1WIREDevice-markdown274" style="text-align:center;" class="show-list-numbers-and-dots">
-      <p style="color:#387EF5;font-size:18px;">
+      <p style="color:#3C5A99;font-size:18px;">
         <strong> {{ data.devicename }} </strong>
       </p>
     </div>
@@ -16,31 +16,31 @@
     <form id="view1WIREDevice-form153" class="list">
       <div class="spacer" style="width: 480px; height: 10px;"></div>
       <div id="view1WIREDevice-markdown275" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Manufacturer</p>
+        <p style="color:#3C5A99;">Manufacturer</p>
       </div>
       <div id="view1WIREDevice-markdown276" class="show-list-numbers-and-dots">
         <p style="color:#444444;font-size:18px;">{{ data.sensor.manufacturer }}</p>
       </div>
       <div id="view1WIREDevice-markdown277" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Model</p>
+        <p style="color:#3C5A99;">Model</p>
       </div>
       <div id="view1WIREDevice-markdown278" class="show-list-numbers-and-dots">
         <p style="color:#444444;font-size:18px;">{{ data.sensor.model }}</p>
       </div>
       <div id="view1WIREDevice-markdown279" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Class</p>
+        <p style="color:#3C5A99;">Class</p>
       </div>
       <div id="view1WIREDevice-markdown280" class="show-list-numbers-and-dots">
         <p style="color:#444444;font-size:18px;">{{ data.sensor.class }}</p>
       </div>
       <div id="view1WIREDevice-markdown330" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Subclass</p>
+        <p style="color:#3C5A99;">Subclass</p>
       </div>
       <div id="view1WIREDevice-markdown331" class="show-list-numbers-and-dots">
         <p style="color:#444444;font-size:18px;">{{ data.sensor.subclass ? data.sensor.subclass : "none" }}</p>
       </div>
       <div id="view1WIREDevice-markdown281" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Type</p>
+        <p style="color:#3C5A99;">Type</p>
       </div>
       <div id="view1WIREDevice-markdown282" class="show-list-numbers-and-dots">
         <p style="color:#444444;font-size:18px;">{{ data.sensor.type }}</p>
@@ -51,7 +51,7 @@
     </form>
     <form id="view1WIREDevice-form155" class="list" ng-show="data.sensor.type==&quot;input&quot;">
       <div id="view1WIREDevice-markdown283" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Live Status</p>
+        <p style="color:#3C5A99;">Live Status</p>
       </div>
       <div id="view1WIREDevice-markdown284" class="show-list-numbers-and-dots">
         <p style="color:#444444;font-size:18px;">Value: {{ sensor_readings.value }}</p>
