--- a/webapp/src/ionicapp/www/templates/viewDevice.html
+++ b/webapp/src/ionicapp/www/templates/viewDevice.html
@@ -8,13 +8,13 @@
   <ion-content padding="true" class="has-header">
     <div class="spacer" style="height: 12px;"></div>
     <div id="viewDevice-markdown13" style="text-align:center;" class="show-list-numbers-and-dots">
-      <p style="color:#387EF5;font-size:18px;">
+      <p style="color:#3C5A99;font-size:18px;">
         <strong> {{ data.devicename }} </strong>
       </p>
     </div>
     <div class="spacer" style="height: 12px;"></div>
     <div id="viewDevice-markdown251" class="show-list-numbers-and-dots">
-      <p style="color:#387EF5;">Device information</p>
+      <p style="color:#3C5A99;">Device information</p>
     </div>
     <form id="viewDevice-form167" class="list">
       <label class="item item-input" id="viewDevice-input35" name="input-devicename">
@@ -49,7 +49,7 @@
       <button id="viewDevice-button21" ng-click="upgradeDeviceFirmware()" ng-disabled="newfirmwareversion < data.version &amp;&amp; data.version != &quot;UNKNOWN&quot;" class="button button-positive button-block">Upgrade Device Firmware</button>
     </form>
     <div id="viewDevice-markdown252" class="show-list-numbers-and-dots">
-      <p style="color:#387EF5;">Device operations</p>
+      <p style="color:#3C5A99;">Device operations</p>
     </div>
     <button id="viewDevice-button153" ng-click="getDevice(data.devicename)" style="text-align:left;" class="button button-positive button-block button-outline icon-right ion-android-arrow-dropright">Query Device</button>
     <button id="viewDevice-button56" ng-click="setDevice(data.devicename, &quot;restart&quot;)" style="text-align:left;" class="button button-positive button-block button-outline icon-right ion-android-arrow-dropright">Restart Device</button>
