--- a/webapp/src/ionicapp/www/templates/viewTPROBEDevice.html
+++ b/webapp/src/ionicapp/www/templates/viewTPROBEDevice.html
@@ -8,7 +8,7 @@
   <ion-content padding="true" class="has-header">
     <div class="spacer" style="width: 300px; height: 12px;"></div>
     <div id="viewTPROBEDevice-markdown238" style="text-align:center;" class="show-list-numbers-and-dots">
-      <p style="color:#387EF5;font-size:18px;">
+      <p style="color:#3C5A99;font-size:18px;">
         <strong> {{ data.devicename }} </strong>
       </p>
     </div>
@@ -16,31 +16,31 @@
     <form id="viewTPROBEDevice-form145" class="list">
       <div class="spacer" style="width: 480px; height: 10px;"></div>
       <div id="viewTPROBEDevice-markdown239" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Manufacturer</p>
+        <p style="color:#3C5A99;">Manufacturer</p>
       </div>
       <div id="viewTPROBEDevice-markdown240" class="show-list-numbers-and-dots">
         <p style="color:#444444;font-size:18px;">{{ data.sensor.manufacturer }}</p>
       </div>
       <div id="viewTPROBEDevice-markdown241" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Model</p>
+        <p style="color:#3C5A99;">Model</p>
       </div>
       <div id="viewTPROBEDevice-markdown242" class="show-list-numbers-and-dots">
         <p style="color:#444444;font-size:18px;">{{ data.sensor.model }}</p>
       </div>
       <div id="viewTPROBEDevice-markdown243" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Class</p>
+        <p style="color:#3C5A99;">Class</p>
       </div>
       <div id="viewTPROBEDevice-markdown325" class="show-list-numbers-and-dots">
         <p style="color:#444444;font-size:18px;">{{ data.sensor.class }}</p>
       </div>
       <div id="viewTPROBEDevice-markdown324" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Subclass</p>
+        <p style="color:#3C5A99;">Subclass</p>
       </div>
       <div id="viewTPROBEDevice-markdown244" class="show-list-numbers-and-dots">
         <p style="color:#444444;font-size:18px;">{{ data.sensor.subclass ? data.sensor.subclass : "none" }}</p>
       </div>
       <div id="viewTPROBEDevice-markdown245" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Type</p>
+        <p style="color:#3C5A99;">Type</p>
       </div>
       <div id="viewTPROBEDevice-markdown246" class="show-list-numbers-and-dots">
         <p style="color:#444444;font-size:18px;">{{ data.sensor.type }}</p>
@@ -51,7 +51,7 @@
     </form>
     <form id="viewTPROBEDevice-form183" class="list">
       <div id="viewTPROBEDevice-markdown247" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Live Status</p>
+        <p style="color:#3C5A99;">Live Status</p>
       </div>
     </form>
     <form id="viewTPROBEDevice-form147" class="list" ng-show="data.sensor.type==&quot;input&quot;">
