--- a/webapp/src/ionicapp/www/templates/addADCDevice.html
+++ b/webapp/src/ionicapp/www/templates/addADCDevice.html
@@ -8,7 +8,7 @@
   <ion-content padding="true" class="has-header">
     <div class="spacer" style="width: 300px; height: 12px;"></div>
     <div id="addADCDevice-markdown183" style="text-align:center;" class="show-list-numbers-and-dots">
-      <p style="color:#387EF5;font-size:18px;">
+      <p style="color:#3C5A99;font-size:18px;">
         <strong> {{ data.devicename }} </strong>
       </p>
     </div>
@@ -19,7 +19,7 @@
     </div>
     <div class="spacer" style="width: 300px; height: 10px;"></div>
     <div id="addADCDevice-markdown185" class="show-list-numbers-and-dots">
-      <p style="color:#387EF5;">Manufacturer</p>
+      <p style="color:#3C5A99;">Manufacturer</p>
     </div>
     <form id="addADCDevice-form127" class="list">
       <label class="item item-select" id="addADCDevice-select56">
@@ -31,7 +31,7 @@
       <hr>
     </div>
     <div id="addADCDevice-markdown187" class="show-list-numbers-and-dots">
-      <p style="color:#387EF5;">Device Models</p>
+      <p style="color:#3C5A99;">Device Models</p>
     </div>
     <form id="addADCDevice-form128" class="list" ng-show="data.adc.manufacturerid==0">
       <label class="item item-select" id="addADCDevice-select57">
