--- a/webapp/src/ionicapp/www/templates/addI2CDevice.html
+++ b/webapp/src/ionicapp/www/templates/addI2CDevice.html
@@ -8,7 +8,7 @@
   <ion-content padding="true" class="has-header">
     <div class="spacer" style="width: 300px; height: 12px;"></div>
     <div id="addI2CDevice-markdown74" style="text-align:center;" class="show-list-numbers-and-dots">
-      <p style="color:#387EF5;font-size:18px;">
+      <p style="color:#3C5A99;font-size:18px;">
         <strong> {{ data.devicename }} </strong>
       </p>
     </div>
@@ -19,7 +19,7 @@
     </div>
     <div class="spacer" style="width: 300px; height: 10px;"></div>
     <div id="addI2CDevice-markdown35" class="show-list-numbers-and-dots">
-      <p style="color:#387EF5;">Manufacturer</p>
+      <p style="color:#3C5A99;">Manufacturer</p>
     </div>
     <form id="addI2CDevice-form17" class="list">
       <label class="item item-select" id="addI2CDevice-select16">
@@ -31,7 +31,7 @@
       <hr>
     </div>
     <div id="addI2CDevice-markdown48" class="show-list-numbers-and-dots">
-      <p style="color:#387EF5;">Device Models</p>
+      <p style="color:#3C5A99;">Device Models</p>
     </div>
     <form id="addI2CDevice-form39" class="list" ng-show="data.i2c.manufacturerid==0">
       <label class="item item-select" id="addI2CDevice-select19">
