--- a/webapp/src/ionicapp/www/templates/anemometer.html
+++ b/webapp/src/ionicapp/www/templates/anemometer.html
@@ -8,7 +8,7 @@
   <ion-content padding="true" class="has-header">
     <div class="spacer" style="width: 300px; height: 12px;"></div>
     <div id="anemometer-markdown203" style="text-align:center;" class="show-list-numbers-and-dots">
-      <p style="color:#387EF5;font-size:18px;">
+      <p style="color:#3C5A99;font-size:18px;">
         <strong> {{ data.devicename }} </strong>
       </p>
     </div>
@@ -16,7 +16,7 @@
     <div class="spacer" style="width: 300px; height: 20px;"></div>
     <form id="anemometer-form129" class="list">
       <div id="anemometer-markdown204" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Mode</p>
+        <p style="color:#3C5A99;">Mode</p>
       </div>
       <label class="item item-select" id="anemometer-select58">
         <span class="input-label"></span>
@@ -25,7 +25,7 @@
     </form>
     <form id="anemometer-form130" class="list" ng-show="data.attributes.mode==0">
       <div id="anemometer-markdown205" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Threshold</p>
+        <p style="color:#3C5A99;">Threshold</p>
       </div>
       <label class="item item-input" id="anemometer-input110">
         <span class="input-label">Value</span>
@@ -34,7 +34,7 @@
     </form>
     <form id="anemometer-form132" class="list" ng-show="data.attributes.mode==1">
       <div id="anemometer-markdown206" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Threshold</p>
+        <p style="color:#3C5A99;">Threshold</p>
       </div>
       <label class="item item-input" id="anemometer-input111">
         <span class="input-label">Minimum Limit</span>
@@ -51,7 +51,7 @@
     </form>
     <form id="anemometer-form133" class="list">
       <div id="anemometer-markdown207" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Alert</p>
+        <p style="color:#3C5A99;">Alert</p>
       </div>
       <label class="item item-select" id="anemometer-select60">
         <span class="input-label">Type</span>
@@ -64,7 +64,7 @@
     </form>
     <form id="anemometer-form134" class="list" ng-show="data.attributes.mode==2">
       <div id="anemometer-markdown208" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Hardware</p>
+        <p style="color:#3C5A99;">Hardware</p>
       </div>
       <label class="item item-select" id="anemometer-select61">
         <span class="input-label">IoT Modem</span>
@@ -73,13 +73,13 @@
     </form>
     <form id="anemometer-form135" class="list" ng-show="data.attributes.mode!=2">
       <div id="anemometer-markdown209" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Notification settings</p>
+        <p style="color:#3C5A99;">Notification settings</p>
       </div>
       <ion-toggle toggle-class="toggle-positive" id="anemometer-toggle9" ng-change="changeNotification(data.showNotification)" ng-model="data.showNotification">Show</ion-toggle>
     </form>
     <form id="anemometer-form136" class="list" ng-show="data.showNotification==1 &amp;&amp; data.attributes.mode!=2">
       <div id="anemometer-markdown210" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Messages</p>
+        <p style="color:#3C5A99;">Messages</p>
       </div>
       <ion-checkbox id="anemometer-checkbox18" ng-model="data.attributes.notification.messages[0].enable">Message on activation</ion-checkbox>
       <label class="item item-input" id="anemometer-textarea14">
@@ -90,7 +90,7 @@
     </form>
     <form id="anemometer-form137" class="list" ng-show="data.showNotification==1 &amp;&amp; data.attributes.mode!=2">
       <div id="anemometer-markdown211" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Recipients</p>
+        <p style="color:#3C5A99;">Recipients</p>
       </div>
       <ion-checkbox id="anemometer-checkbox26" ng-model="data.attributes.notification.endpoints.email.enable">Send email to</ion-checkbox>
       <label class="item item-input" id="anemometer-input117">
