--- a/webapp/src/ionicapp/www/templates/humidity.html
+++ b/webapp/src/ionicapp/www/templates/humidity.html
@@ -8,7 +8,7 @@
   <ion-content padding="true" class="has-header">
     <div class="spacer" style="width: 300px; height: 12px;"></div>
     <div id="humidity-markdown304" style="text-align:center;" class="show-list-numbers-and-dots">
-      <p style="color:#387EF5;font-size:18px;">
+      <p style="color:#3C5A99;font-size:18px;">
         <strong> {{ data.devicename }} </strong>
       </p>
     </div>
@@ -16,7 +16,7 @@
     <div class="spacer" style="width: 300px; height: 20px;"></div>
     <form id="humidity-form169" class="list">
       <div id="humidity-markdown306" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Mode</p>
+        <p style="color:#3C5A99;">Mode</p>
       </div>
       <label class="item item-select" id="humidity-select12">
         <span class="input-label"></span>
@@ -25,7 +25,7 @@
     </form>
     <form id="humidity-form170" class="list" ng-show="data.attributes.mode==0">
       <div id="humidity-markdown307" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Threshold</p>
+        <p style="color:#3C5A99;">Threshold</p>
       </div>
       <label class="item item-input" id="humidity-input135">
         <span class="input-label">Value</span>
@@ -34,7 +34,7 @@
     </form>
     <form id="humidity-form171" class="list" ng-show="data.attributes.mode==1">
       <div id="humidity-markdown316" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Threshold</p>
+        <p style="color:#3C5A99;">Threshold</p>
       </div>
       <label class="item item-input" id="humidity-input136">
         <span class="input-label">Minimum Limit</span>
@@ -51,7 +51,7 @@
     </form>
     <form id="humidity-form172" class="list">
       <div id="humidity-markdown318" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Alert</p>
+        <p style="color:#3C5A99;">Alert</p>
       </div>
       <label class="item item-select" id="humidity-select14">
         <span class="input-label">Type</span>
@@ -64,7 +64,7 @@
     </form>
     <form id="humidity-form173" class="list" ng-show="data.attributes.mode==2">
       <div id="humidity-markdown319" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Hardware</p>
+        <p style="color:#3C5A99;">Hardware</p>
       </div>
       <label class="item item-select" id="humidity-select15">
         <span class="input-label">IoT Modem</span>
@@ -73,13 +73,13 @@
     </form>
     <form id="humidity-form174" class="list" ng-show="data.attributes.mode!=2">
       <div id="humidity-markdown320" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Notification settings</p>
+        <p style="color:#3C5A99;">Notification settings</p>
       </div>
       <ion-toggle toggle-class="toggle-positive" id="humidity-toggle18" ng-change="changeNotification(data.showNotification)" ng-model="data.showNotification">Show</ion-toggle>
     </form>
     <form id="humidity-form175" class="list" ng-show="data.showNotification==1 &amp;&amp; data.attributes.mode!=2">
       <div id="humidity-markdown321" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Messages</p>
+        <p style="color:#3C5A99;">Messages</p>
       </div>
       <ion-checkbox id="humidity-checkbox5" ng-model="data.attributes.notification.messages[0].enable">Message on activation</ion-checkbox>
       <label class="item item-input" id="humidity-textarea18">
@@ -90,7 +90,7 @@
     </form>
     <form id="humidity-form176" class="list" ng-show="data.showNotification==1 &amp;&amp; data.attributes.mode!=2">
       <div id="humidity-markdown322" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Recipients</p>
+        <p style="color:#3C5A99;">Recipients</p>
       </div>
       <ion-checkbox id="humidity-checkbox7" ng-model="data.attributes.notification.endpoints.email.enable">Send email to</ion-checkbox>
       <label class="item item-input" id="humidity-input139">
