--- a/webapp/src/ionicapp/www/templates/lightRGB.html
+++ b/webapp/src/ionicapp/www/templates/lightRGB.html
@@ -5,14 +5,14 @@
   <ion-content padding="true" class="has-header">
     <div class="spacer" style="width: 300px; height: 12px;"></div>
     <div id="lightRGB-markdown169" style="text-align:center;" class="show-list-numbers-and-dots">
-      <p style="color:#387EF5;font-size:18px;">
+      <p style="color:#3C5A99;font-size:18px;">
         <strong> {{ data.colortype }} </strong>
       </p>
     </div>
     <div class="spacer" style="width: 480px; height: 20px;"></div>
     <form id="lightRGB-form114" class="list" ng-show="data.colortype==&quot;RGB&quot;">
       <div id="lightRGB-markdown170" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Source endpoint</p>
+        <p style="color:#3C5A99;">Source endpoint</p>
       </div>
       <label class="item item-select" id="lightRGB-select46">
         <span class="input-label"></span>
@@ -21,7 +21,7 @@
     </form>
     <form id="lightRGB-form121" class="list" ng-show="data.colortype==&quot;RED&quot;">
       <div id="lightRGB-markdown176" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Source endpoint</p>
+        <p style="color:#3C5A99;">Source endpoint</p>
       </div>
       <label class="item item-select" id="lightRGB-select24">
         <span class="input-label"></span>
@@ -30,7 +30,7 @@
     </form>
     <form id="lightRGB-form122" class="list" ng-show="data.colortype==&quot;GREEN&quot;">
       <div id="lightRGB-markdown177" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Source endpoint</p>
+        <p style="color:#3C5A99;">Source endpoint</p>
       </div>
       <label class="item item-select" id="lightRGB-select25">
         <span class="input-label"></span>
@@ -39,7 +39,7 @@
     </form>
     <form id="lightRGB-form123" class="list" ng-show="data.colortype==&quot;BLUE&quot;">
       <div id="lightRGB-markdown178" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Source endpoint</p>
+        <p style="color:#3C5A99;">Source endpoint</p>
       </div>
       <label class="item item-select" id="lightRGB-select49">
         <span class="input-label"></span>
@@ -48,7 +48,7 @@
     </form>
     <form id="lightRGB-form115" class="list" ng-show="data.colortype==&quot;RGB&quot; &amp;&amp; data.attributes.color.single.endpoint==0">
       <div id="lightRGB-markdown171" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Color 0x{{ data.attributes.color.single.manual.toString(16).toUpperCase() }} ({{ data.attributes.color.single.manual }})</p>
+        <p style="color:#3C5A99;">Color 0x{{ data.attributes.color.single.manual.toString(16).toUpperCase() }} ({{ data.attributes.color.single.manual }})</p>
       </div>
       <ion-item class="range range-assertive assertive" id="lightRGB-range13">Red
         <input type="range" value="0" min="0" max="255" step="1" ng-model="datatemp.colorRED" ng-change="computeHexCode()">
@@ -62,7 +62,7 @@
     </form>
     <form id="lightRGB-form101" class="list" ng-show="data.colortype==&quot;RED&quot; &amp;&amp; data.attributes.color.individual.red.endpoint==0">
       <div id="lightRGB-markdown132" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Color 0x{{ data.attributes.color.individual.red.manual.toString(16).toUpperCase() }} ({{ data.attributes.color.individual.red.manual }})</p>
+        <p style="color:#3C5A99;">Color 0x{{ data.attributes.color.individual.red.manual.toString(16).toUpperCase() }} ({{ data.attributes.color.individual.red.manual }})</p>
       </div>
       <ion-item class="range range-assertive assertive" id="lightRGB-range16">Red
         <input type="range" value="0" min="0" max="255" step="1" ng-model="data.attributes.color.individual.red.manual" ng-change="computeHexCode()">
@@ -70,7 +70,7 @@
     </form>
     <form id="lightRGB-form102" class="list" ng-show="data.colortype==&quot;GREEN&quot; &amp;&amp; data.attributes.color.individual.green.endpoint==0">
       <div id="lightRGB-markdown134" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Color 0x{{ data.attributes.color.individual.green.manual.toString(16).toUpperCase() }} ({{ data.attributes.color.individual.green.manual }})</p>
+        <p style="color:#3C5A99;">Color 0x{{ data.attributes.color.individual.green.manual.toString(16).toUpperCase() }} ({{ data.attributes.color.individual.green.manual }})</p>
       </div>
       <ion-item class="range range-balanced balanced" id="lightRGB-range20">Green
         <input type="range" value="0" min="0" max="255" step="1" ng-model="data.attributes.color.individual.green.manual" ng-change="computeHexCode()">
@@ -78,7 +78,7 @@
     </form>
     <form id="lightRGB-form120" class="list" ng-show="data.colortype==&quot;BLUE&quot; &amp;&amp; data.attributes.color.individual.blue.endpoint==0">
       <div id="lightRGB-markdown175" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Color 0x{{ data.attributes.color.individual.blue.manual.toString(16).toUpperCase() }} ({{ data.attributes.color.individual.blue.manual }})</p>
+        <p style="color:#3C5A99;">Color 0x{{ data.attributes.color.individual.blue.manual.toString(16).toUpperCase() }} ({{ data.attributes.color.individual.blue.manual }})</p>
       </div>
       <ion-item class="range range-positive positive" id="lightRGB-range24">Blue
         <input type="range" value="0" min="0" max="255" step="1" ng-model="data.attributes.color.individual.blue.manual" ng-change="computeHexCode()">
@@ -86,7 +86,7 @@
     </form>
     <form id="lightRGB-form116" class="list" ng-show="data.colortype==&quot;RGB&quot; &amp;&amp; data.attributes.color.single.endpoint==1">
       <div id="lightRGB-markdown172" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Hardware</p>
+        <p style="color:#3C5A99;">Hardware</p>
       </div>
       <label class="item item-select" id="lightRGB-select47">
         <span class="input-label">IoT Modem</span>
@@ -107,7 +107,7 @@
     </form>
     <form id="lightRGB-form124" class="list" ng-show="data.colortype==&quot;RED&quot; &amp;&amp; data.attributes.color.individual.red.endpoint==1">
       <div id="lightRGB-markdown179" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Hardware</p>
+        <p style="color:#3C5A99;">Hardware</p>
       </div>
       <label class="item item-select" id="lightRGB-select50">
         <span class="input-label">IoT Modem</span>
@@ -128,7 +128,7 @@
     </form>
     <form id="lightRGB-form125" class="list" ng-show="data.colortype==&quot;GREEN&quot; &amp;&amp; data.attributes.color.individual.green.endpoint==1">
       <div id="lightRGB-markdown180" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Hardware</p>
+        <p style="color:#3C5A99;">Hardware</p>
       </div>
       <label class="item item-select" id="lightRGB-select52">
         <span class="input-label">IoT Modem</span>
@@ -149,7 +149,7 @@
     </form>
     <form id="lightRGB-form126" class="list" ng-show="data.colortype==&quot;BLUE&quot; &amp;&amp; data.attributes.color.individual.blue.endpoint==1">
       <div id="lightRGB-markdown181" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Hardware</p>
+        <p style="color:#3C5A99;">Hardware</p>
       </div>
       <label class="item item-select" id="lightRGB-select54">
         <span class="input-label">IoT Modem</span>
