--- a/webapp/src/ionicapp/www/templates/menu.html
+++ b/webapp/src/ionicapp/www/templates/menu.html
@@ -8,7 +8,7 @@
     </ion-nav-bar>
     <ion-nav-view name="side-menu21"></ion-nav-view>
   </ion-side-menu-content>
-  <ion-side-menu side="left" id="side-menu21" style="background-color:#387EF5;">
+  <ion-side-menu side="left" id="side-menu21" style="background-color:#3C5A99;">
     <ion-content padding="false" style="top:0px !important;" class="side-menu-left ">
       <div class="spacer" style="width: 268px; height: 34px;"></div>
       <div id="menu-markdown8" style="text-align:center;" class="show-list-numbers-and-dots">
