--- a/webapp/src/ionicapp/www/templates/notification.html
+++ b/webapp/src/ionicapp/www/templates/notification.html
@@ -6,7 +6,7 @@
     </form>
     <form id="notification-form215" class="list" ng-show="!hide_settings">
       <div id="notification-markdown348" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Filter options</p>
+        <p style="color:#3C5A99;">Filter options</p>
       </div>
       <div class="spacer" style="width: 300px; height: 5px;"></div>
       <label class="item item-select widget_button_third" id="notification-select102">
@@ -38,7 +38,7 @@
     <ion-list id="notification-list10">
       <div class="item item-body" id="notification-list-item-container8" ng-repeat="item in items">
         <div id="notification-markdown290" class="show-list-numbers-and-dots">
-          <p style="margin-top:0px;color:#387EF5;font-size:16px;">
+          <p style="margin-top:0px;color:#3C5A99;font-size:16px;">
             <strong> {{ item.devicename }} </strong> {{ item.deviceid }}</p>
         </div>
         <div id="notification-markdown317" class="show-list-numbers-and-dots">
