--- a/webapp/src/ionicapp/www/templates/sensorChart.html
+++ b/webapp/src/ionicapp/www/templates/sensorChart.html
@@ -8,7 +8,7 @@
   <ion-content padding="true" class="has-header">
     <div class="spacer" style="width: 300px; height: 12px;"></div>
     <div id="sensorChart-markdown333" style="text-align:center;" class="show-list-numbers-and-dots">
-      <p style="color:#387EF5;font-size:18px;">
+      <p style="color:#3C5A99;font-size:18px;">
         <strong> {{ data.devicename }} </strong>
       </p>
     </div>
@@ -16,7 +16,7 @@
     <form id="sensorChart-form188" class="list">
       <div class="item item-body" id="sensorChart-list-item-container14">
         <div id="sensorChart-markdown347" class="show-list-numbers-and-dots">
-          <p style="margin-top:0px;color:#387EF5;font-size:18px;">
+          <p style="margin-top:0px;color:#3C5A99;font-size:18px;">
             <strong>{{ data.sensor.sensorname }}</strong>
           </p>
         </div>
