--- a/webapp/src/ionicapp/www/templates/transactionDetails.html
+++ b/webapp/src/ionicapp/www/templates/transactionDetails.html
@@ -7,7 +7,7 @@
     <ion-list id="transactionDetails-list12">
       <div class="item item-body" id="transactionDetails-list-item-container15">
         <div id="transactionDetails-markdown407" class="show-list-numbers-and-dots">
-          <p style="margin-top:0px;color:#387EF5;font-size:16px;">
+          <p style="margin-top:0px;color:#3C5A99;font-size:16px;">
             <strong> Paypal Transaction ID: {{ data.id }} </strong>
           </p>
         </div>
