--- a/webapp/src/ionicapp/www/templates/viewI2CDevice.html
+++ b/webapp/src/ionicapp/www/templates/viewI2CDevice.html
@@ -8,7 +8,7 @@
   <ion-content padding="true" class="has-header">
     <div class="spacer" style="width: 300px; height: 12px;"></div>
     <div id="viewI2CDevice-markdown76" style="text-align:center;" class="show-list-numbers-and-dots">
-      <p style="color:#387EF5;font-size:18px;">
+      <p style="color:#3C5A99;font-size:18px;">
         <strong> {{ data.devicename }} </strong>
       </p>
     </div>
@@ -16,37 +16,37 @@
     <form id="viewI2CDevice-form31" class="list">
       <div class="spacer" style="width: 480px; height: 10px;"></div>
       <div id="viewI2CDevice-markdown89" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Manufacturer</p>
+        <p style="color:#3C5A99;">Manufacturer</p>
       </div>
       <div id="viewI2CDevice-markdown101" class="show-list-numbers-and-dots">
         <p style="color:#444444;font-size:18px;">{{ data.sensor.manufacturer }}</p>
       </div>
       <div id="viewI2CDevice-markdown102" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Model</p>
+        <p style="color:#3C5A99;">Model</p>
       </div>
       <div id="viewI2CDevice-markdown103" class="show-list-numbers-and-dots">
         <p style="color:#444444;font-size:18px;">{{ data.sensor.model }}</p>
       </div>
       <div id="viewI2CDevice-markdown104" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Address</p>
+        <p style="color:#3C5A99;">Address</p>
       </div>
       <div id="viewI2CDevice-markdown105" class="show-list-numbers-and-dots">
         <p style="color:#444444;font-size:18px;">0x{{ data.sensor.address.toString(16).toUpperCase() }} ({{ data.sensor.address }})</p>
       </div>
       <div id="viewI2CDevice-markdown106" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Class</p>
+        <p style="color:#3C5A99;">Class</p>
       </div>
       <div id="viewI2CDevice-markdown122" class="show-list-numbers-and-dots">
         <p style="color:#444444;font-size:18px;">{{ data.sensor.class }}</p>
       </div>
       <div id="viewI2CDevice-markdown326" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Subclass</p>
+        <p style="color:#3C5A99;">Subclass</p>
       </div>
       <div id="viewI2CDevice-markdown327" class="show-list-numbers-and-dots">
         <p style="color:#444444;font-size:18px;">{{ data.sensor.subclass ? data.sensor.subclass : "none" }}</p>
       </div>
       <div id="viewI2CDevice-markdown145" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Type</p>
+        <p style="color:#3C5A99;">Type</p>
       </div>
       <div id="viewI2CDevice-markdown146" class="show-list-numbers-and-dots">
         <p style="color:#444444;font-size:18px;">{{ data.sensor.type }}</p>
@@ -57,7 +57,7 @@
     </form>
     <form id="viewI2CDevice-form112" class="list" ng-show="data.sensor.type==&quot;input&quot;">
       <div id="viewI2CDevice-markdown147" class="show-list-numbers-and-dots">
-        <p style="color:#387EF5;">Live Status</p>
+        <p style="color:#3C5A99;">Live Status</p>
       </div>
       <div id="viewI2CDevice-markdown148" class="show-list-numbers-and-dots">
         <p style="color:#444444;font-size:18px;">Value: {{ sensor_readings.value }}</p>
